signup.css
.title {
  text-align: center;
  margin-top: 1em;
}

.create {
  font-size: small;
  /* display: block; */
  text-align: center;
}

input {
  /* width: 50%; */
  display: block;
  margin : auto;
}

.item {
  padding: 1em;
  /* margin: auto; */
  /* text-align: center; */
  text-align: center;
  justify-content: center;
  margin: auto;
}

.forgot {
  font-size: small;
  /* display: block; */
  display: none;
}

